--- a/learning/templates/mysite/caregory_list.html
+++ b/learning/templates/mysite/caregory_list.html
@@ -22,7 +22,7 @@
                     <p><a href="{% url 'learning:card_detail' card.id %}" style="color:black;">{{ card.title}}</a></p>
                     {% endfor %}
                     <br><br>
-                    <a  href="{% url 'learning:category_detail' category.name_en %}">このカテゴリの記事を全て見る</a>
+                    <a  href="{% url 'learning:category_detail' category.name_en %}">このカテゴリのカードを全て見る</a>
                 </div>
             </div>
         </div>
