--- a/learning/templates/mysite/card_list.html
+++ b/learning/templates/mysite/card_list.html
@@ -6,25 +6,25 @@
     <div class="row">
         <div class="col-md-9">
             <br>
-            <h2>記事一覧</h2>
+            <h2>カード一覧</h2>
             <br>
             <table class="table">
                 <thead>
                     <tr>
-                        <th>タイトル</th>
-                        <th>サブタイトル</th>
-                        <th>URL</th>
-                        <th>本文</th>
-                        <th>何</th>
-                        <th>理由</th>
-                        <th>だから何</th>
+                        <th width="200px" class="text-white">タイトル</th>
+                        <th width="400px" class="text-white">サブタイトル</th>
+                        <th width="400px" class="text-white">URL</th>
+                        <th width="200px" class="text-white">本文</th>
+                        <th width="200px" class="text-white">何</th>
+                        <th width="200px" class="text-white">理由</th>
+                        <th width="200px" class="text-white">だから何</th>
                     </tr>
                 </thead>
                 <tbody>
                     <!-- モデル名_listで自動的に渡される -->
-                    {% for item in search_list %}
+                    {% for item in card_list %}
                     <tr>
-                        <td><a href="{% url 'mysite:card_update' item.pk %}" class="text-decoration-underline">{{item.title}}</a></td>
+                        <td><a href="{% url 'learning:card_detail' item.pk %}" class="text-decoration-underline">{{item.title}}</a></td>
                         <td>{{item.subtitle|safe|truncatechars_html:30}}</td>
                         <td>{{item.curl|safe|truncatechars_html:30}}</td>
                         <td>{{item.content|safe|truncatechars_html:30}}</td>
@@ -35,9 +35,12 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <br>
+            {% comment %} <br> {% endcomment %}
+            {% comment %} {% include 'mysite/pagenation.html' %} {% endcomment %}
+            {% comment %} <br> {% endcomment %}
         </div>
 
     </div>
 </div>
+
 {% endblock %}
