--- a/learning/templates/mysite/search.html
+++ b/learning/templates/mysite/search.html
@@ -6,18 +6,19 @@
     <div class="row">
         <div class="col-md-9">
             <br>
-            <h2>記事一覧</h2>
+            <h2>カード一覧</h2>
             <br>
             <table class="table">
                 <thead>
                     <tr>
-                        <th>タイトル</th>
-                        <th>サブタイトル</th>
-                        <th>URL</th>
-                        <th>本文</th>
-                        <th>何</th>
-                        <th>理由</th>
-                        <th>だから何</th>
+                        <th width="400px" class="text-black">タイトル</th>
+                        <th width="400px" class="text-black">見出し</th>
+                        <th width="400px" class="text-black">URL</th>
+                        <th width="400px" class="text-black">該当箇所</th>
+                        <th width="400px" class="text-black">本文</th>
+                        <th width="400px" class="text-black">What</th>
+                        <th width="400px" class="text-black">Why</th>
+                        <th width="400px" class="text-black">So What</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,7 +27,8 @@
                     <tr>
                         <td><a href="{% url 'learning:card_detail' item.pk %}" class="text-decoration-underline">{{item.title}}</a></td>
                         <td>{{item.subtitle|safe|truncatechars_html:30}}</td>
-                        <td>{{item.curl|safe|truncatechars_html:30}}</td>
+                        <td>{{item.url|safe|truncatechars_html:30}}</td>
+                        <td>{{item.section|safe|truncatechars_html:30}}</td>
                         <td>{{item.content|safe|truncatechars_html:30}}</td>
                         <td>{{item.what|safe|truncatechars_html:30}}</td>
                         <td>{{item.why|safe|truncatechars_html:30}}</td>
