--- a/learning/templates/mysite/toppage.html
+++ b/learning/templates/mysite/toppage.html
@@ -8,6 +8,7 @@
     <title>Nevernote</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+    <link rel="icon" type="image/png" href="{% static 'img/sticky-note.ico' %}" />
     <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <!-- MDB -->
@@ -24,6 +25,7 @@
   <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <h1>Nevernote</h1>
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -57,12 +59,13 @@
     <!-- Navbar -->
 
     <!-- Jumbotron -->
-    <div class="p-5 text-center bg-light">
-      <h1 class="mb-3">進化したノートで、アイデアをもっと形に</h1>
-      <h4 class="mb-3">Nevernote ならアイデアを簡単に記録して、後から素早く見つけられます。</h4>
-      
-      <a class="btn btn-primary" href="{% url 'learning:signup' %}" role="button">新規登録</a>
-      <a class="btn btn-primary" href="{% url 'learning:login' %}" role="button">ログイン</a>
+    <div class="p-5 text-center maintext">
+      <h1 class="mb-3">メモとノートの融合で、アイデアをもっと形に</h1>
+      <h4 class="mb-3">※NevernoteはEvernoteと全く関係ありません</h4>
+      <br>
+      <br>
+      <a class="btn evernote" href="{% url 'learning:signup' %}" role="button">新規登録</a>
+      <a class="btn evernote" href="{% url 'learning:login' %}" role="button">ログイン</a>
     </div>
     <!-- Jumbotron -->
   </header>
@@ -71,26 +74,54 @@
       <div class="card mb-3">
         <div class="row g-0">
           <div class="col-md-6">
-            <div class="card-body">
-              <h5 class="card-title">利用者の声</h5>
-              <p class="card-text">
-                Evernoteと間違えて登録してしまった。ややこしいのでサービス廃止してほしい
-              </p>
-              <p class="card-text">
-                <small class="text-muted">羽田　圭介</small>
+            <img
+              src="{% static 'img/note.jpeg' %}"
+              alt="note"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="card-body hada-comment">
+              <p class="card-text fs-3">
+                <br>
+                ・（将来的に）各種デバイスへ対応<br>
+                <br>
+                ・（将来的に）各種メディア保存が可能<br>
+                <br>
+                ・（ある程度は）自由に編集<br>
+                <br>
+                ・（タイトルと本文のみ）検索機能搭載
               </p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="card mb-3">
+        <div class="row g-0">
           <div class="col-md-6">
+            <div class="card-body hada-comment">
+              <i class="fas fa-quote-left quote d-flex align-items-center justify-content-center fa-2x style='color:darkgreen'"></i>
+              <br>
+              <p class="card-text fs-3">
+                Evernoteと間違えて登録してしまった。<br>
+                ややこしいのでサービス廃止してほしい。
+              </p>
+              <p class="card-text fs-3">
+                －羽田　圭介
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 hada-pic">
             <img
-              src="{% static 'img/hada.jpeg' %}"
+              src="{% static 'img/hada_2.jpeg' %}"
               alt="羽田圭介"
-              class="img-fluid"
             />
           </div>
         </div>
       </div>
     </div>
+    <br>
+    <br>  
     <div class="row">
 
           <!--Grid column-->
@@ -100,15 +131,15 @@
             <div class="card">
 
               <div class="card-header bg-white py-3">
-                <p class="text-uppercase small mb-2"><strong>Free</strong></p>
-                <h5 class="mb-0">Free</h5>
+                <p class="text-uppercase small mb-2"><strong>ベーシック</strong></p>
+                <h5 class="mb-0">無料</h5>
               </div>
 
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
+                  <li class="list-group-item">KJ法風付箋活用</li>
+                  <li class="list-group-item">ISBNコード読み取り対応</li>
+                  <li class="list-group-item">定型文章生成機能</li>
                 </ul>
               </div>
 
@@ -129,21 +160,18 @@
             <div class="card border border-primary">
 
               <div class="card-header bg-white py-3">
-                <p class="text-uppercase small mb-2"><strong>Essential</strong></p>
-                <h5 class="mb-0">$19/month</h5>
+                <p class="text-uppercase small mb-2"><strong>エッセンシャル</strong></p>
+                <h5 class="mb-0">Coming Soon</h5>
               </div>
 
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
+                  <li class="list-group-item">Coming Soon</li>
                 </ul>
               </div>
 
               <div class="card-footer bg-white py-3">
-                <button type="button" class="btn btn-primary btn-sm">Buy now</button>
+                <button type="button" class="btn btn-primary btn-sm">Coming Soon</button>
               </div>
 
             </div>
@@ -159,22 +187,18 @@
             <div class="card">
 
               <div class="card-header bg-white py-3">
-                <p class="text-uppercase small mb-2"><strong>Advanced</strong></p>
-                <h5 class="mb-0">$49/month</h5>
+                <p class="text-uppercase small mb-2"><strong>アドバンス</strong></p>
+                <h5 class="mb-0">Coming Soon</h5>
               </div>
 
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
+                  <li class="list-group-item">Coming Soon</li>
                 </ul>
               </div>
 
               <div class="card-footer bg-white py-3">
-                <button type="button" class="btn btn-info btn-sm">Buy now</button>
+                <button type="button" class="btn btn-info btn-sm">Coming Soon</button>
               </div>
 
             </div>
@@ -190,23 +214,18 @@
             <div class="card">
 
               <div class="card-header bg-white py-3">
-                <p class="text-uppercase small mb-2"><strong>Enterprise</strong></p>
-                <h5 class="mb-0">$189/month</h5>
+                <p class="text-uppercase small mb-2"><strong>スペシャル</strong></p>
+                <h5 class="mb-0">Coming Soon</h5>
               </div>
 
               <div class="card-body">
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
-                  <li class="list-group-item">Feature</li>
+                  <li class="list-group-item">Coming Soon</li>
                 </ul>
               </div>
 
               <div class="card-footer bg-white py-3">
-                <button type="button" class="btn btn-info btn-sm">Buy now</button>
+                <button type="button" class="btn btn-info btn-sm">Coming Soon</button>
               </div>
 
             </div>
@@ -263,11 +282,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>※会社は存在しません
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            このアプリケーションは試作品であり、Evernote本体とは全く関係がありません
           </p>
         </div>
         <!-- Grid column -->
@@ -276,19 +294,19 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Products
+            My favotite
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset">Python</a>
           </p>
           <p>
             <a href="#!" class="text-reset">React</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#!" class="text-reset">R</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#!" class="text-reset">Eviews</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -338,7 +356,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Nevernote</a>
   </div>
   <!-- Copyright -->
 </footer>
