--- a/learning/templates/mysite/caregory_list.html
+++ b/learning/templates/mysite/caregory_list.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-9">
             <br>
-            <h2 class="text-white">Category List</h2>
+            <h2 class="text-white">カテゴリ一覧</h2>
             <br>
         </div>
     </div>
