--- a/learning/templates/mysite/category_detail.html
+++ b/learning/templates/mysite/category_detail.html
@@ -5,11 +5,11 @@
     <div class="row">
         <div class="col-md-6">
             <br>
-            <h2>{{object.name}}</h2>
+            <h2 >{{object.name}}</h2>
             <hr>
             <ul class="list-group">
                 {% for item in category_cards %}
-                <li class="list-group-item"><a href="{% url 'learning:card_list' %}">{{ item.title }}</a></li>
+                <li class="list-group-item"><a class="text-black text-decoration-underline" href="{% url 'learning:card_list' %}">{{ item.title }}</a></li>
                 <hr>
                 {% endfor %}
             </ul>
