--- a/learning/templates/mysite/login.html
+++ b/learning/templates/mysite/login.html
@@ -18,7 +18,7 @@
                     {{ field.errors}}
                 <br>
                 {% endfor %}
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-success">Login</button>
                 <br><br>
 
             </form>
