--- a/learning/templates/mysite/toppage.html
+++ b/learning/templates/mysite/toppage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nevernote</title>
+    <title></title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <link rel="icon" type="image/png" href="{% static 'img/sticky-note.ico' %}" />
